--- a/css/scss/_mixin.scss
+++ b/css/scss/_mixin.scss
@@ -1,6 +1,6 @@
 @mixin defaultDecoration($border) {
     margin-bottom: 1rem;
-    padding: 0.5rem;
+    padding: 0.5rem 0.5rem 0 0.5rem;
 
     width: calc(100% - 1.4rem);
 
